--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx babel --watch src --out-dir . --presets react-app/prod"
+    "dev": "npx babel --watch src --out-dir ./build --presets react-app/prod & sass --watch src:build"
   },
   "keywords": [],
   "author": "",
