--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.3",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
+    "framer-motion": "^8.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
