--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.3",
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
@@ -19,7 +20,9 @@
     "bulmaswatch": "^0.8.1",
     "framer-motion": "^8.5.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
