--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 faker = "^17.0.0"
 python-dotenv = "^0.21.1"
 psycopg2-binary = "^2.9.5"
+djangorestframework-camel-case = "^1.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
