--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
